create supabase project install dependency and env.local

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/supabase-js": "^2.39.2",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "json-server": "^0.17.4",
