--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
