--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "json-server": "^0.17.4",
     "next": "14.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "encoding": "^0.1.13"
