--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-server": "^0.17.4",
     "next": "14.0.4",
     "react": "18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1"
   },
